<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="201dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_plus"
                android:layout_width="163dp"
                android:layout_height="wrap_content"
                android:text="@string/button_label_plus"
                android:onClick="doPlus"/>

            <Button
                android:id="@+id/button_minus"
                android:layout_width="162dp"
                android:layout_height="wrap_content"
                android:text="@string/button_label_minus"
                android:onClick="doMinus"/>

            <Button
                android:id="@+id/button_times"
                android:layout_width="162dp"
                android:layout_height="wrap_content"
                android:onClick="doTimes"
                android:text="@string/button_label_times" />

            <Button
                android:id="@+id/button_divide"
                android:layout_width="163dp"
                android:layout_height="wrap_content"
                android:onClick="doDivide"
                android:text="@string/button_label_divide" />

        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_first_number" />

            <EditText
                android:id="@+id/editText_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="@string/editText_first_number" />

            <TextView
                android:id="@+id/textView_second"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_second_number" />

            <EditText
                android:id="@+id/editText_second"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="@string/editText_second_number" />

            <TextView
                android:id="@+id/textView_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview_result" />

            <EditText
                android:id="@+id/editText_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="@string/editText_result" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>